tests/ui/unexpected-eof.rs
fn main() {
    crokey::key!();
    crokey::key!(ctrl);
    crokey::key!(ctrl-);
}
